; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_playlist.c_playlist_remove.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_playlist.c_playlist_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.playlist = type { i32 }
%struct.playlist_entry = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @playlist_remove(%struct.playlist* %0, %struct.playlist_entry* %1) #0 {
  %3 = alloca %struct.playlist*, align 8
  %4 = alloca %struct.playlist_entry*, align 8
  store %struct.playlist* %0, %struct.playlist** %3, align 8
  store %struct.playlist_entry* %1, %struct.playlist_entry** %4, align 8
  %5 = load %struct.playlist*, %struct.playlist** %3, align 8
  %6 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %7 = call i32 @playlist_unlink(%struct.playlist* %5, %struct.playlist_entry* %6)
  %8 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %9 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %8, i32 0, i32 0
  store i32 1, i32* %9, align 4
  %10 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %11 = call i32 @playlist_entry_unref(%struct.playlist_entry* %10)
  ret void
}

declare dso_local i32 @playlist_unlink(%struct.playlist*, %struct.playlist_entry*) #1

declare dso_local i32 @playlist_entry_unref(%struct.playlist_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
